Updated resume link and contact tab on all pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
           </li>
         </ul>
       </div>
@@ -82,11 +82,11 @@
             </p>
             <div class="all-buttons">
               <div>
-                <a href="#" class="resume-button"> Resume </a>
+                <a href="../img/resume-website.pdf" class="resume-button" target="_blank"> Resume </a>
               </div>
               <div class="email-section">
                 <span>
-                  <a href="#" class="email-button"
+                  <a href="mailto:odadaniellek@gmail.com" class="email-button"
                     ><img
                       src="../img/iconmonstr-email-11.svg"
                       class="email-icon"
