--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -29,7 +29,7 @@
           crossorigin="anonymous"
         />
 
-        <link rel="stylesheet" href="../style.css" />
+        <link rel="stylesheet" href="../style-frontend.css" />
       </head>
       <body>
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="../pages/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/contact.html">Contact</a>
+                <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
               </li>
             </ul>
           </div>
@@ -65,20 +65,30 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6 image">
-                <a href="../projects/ux-projects.html" class="ux-projects">
+                <a href="https://quirky-lichterman-84f5c8.netlify.app/" class="ux-projects">
                   <img
                     src="../img/weather-img.png"
                     class="portfolio-img carrots-img img-fluid"
                     alt="Carrots Cooking App"
                   />
                   <div class="image-overlay">
-                    <div class="image-title">Weather App</div>
+                    <div class="image-title"><h1>Weather App</h1>
+                    <p class="text-center hover-list-title">Dev Tools:
+                      <ul class="hover-list">
+                        <li>Bootstrap</li>
+                        <li>CSS</li>
+                        <li>HTML</li>
+                        <li>Javascript</li>
+                        <li>React</li>
+                      </ul>
+                    </p>
+                    </div>
                   </div>
                 </a>
               </div>
               <div class="col-sm-6 image">
                 <a
-                  href="../projects/frontend-projects.html"
+                  href="https://loving-hermann-fdb059.netlify.app/"
                   class="frontend-projects"
                 >
                   <img
@@ -86,7 +96,17 @@
                     class="portfolio-img dictionary-img img-fluid"
                   />
                   <div class="image-overlay-dict">
-                    <div class="image-title-dict">Dictionary App</div>
+                    <div class="image-title-dict"><h1>Dictionary App</h1>
+                    <p class="text-center hover-list-title">Dev Tools:
+                      <ul class="hover-list">
+                        <li>Bootstrap</li>
+                        <li>CSS</li>
+                        <li>HTML</li>
+                        <li>Javascript</li>
+                        <li>React</li>
+                      </ul>
+                    </p>
+                    </div>
                   </div>
                 </a>
               </div>
