--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="../pages/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
           </li>
         </ul>
       </div>
