--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="../pages/about.html">About</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link sr-only" href="../pages/contact.html"
+            <a class="nav-link sr-only" href="mailto:odadaniellek@gmail.com"
               ><span class="sr-only">Contact</span></a
             >
           </li>
