--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -47,7 +47,7 @@
             <a class="nav-link" href="../pages/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/contact.html">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
           </li>
         </ul>
       </div>
@@ -73,7 +73,7 @@
               class="frontend-projects"
             >
               <img
-                src="../img/dictionary-img.png"
+                src="../img/dictionary-projects-main.png"
                 class="portfolio-img dictionary-img img-fluid"
               />
               <div class="image-overlay-dict">
