Made all pages responsive for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -52,6 +52,29 @@
         </ul>
       </div>
     </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <img
+            src="../img/title-hero-img.jpeg"
+            class="img-fluid"
+            alt="tech desk"
+          />
+        </div>
+      </div>
+    </div>
+    <footer class="footer-code">
+      <div class="text-center">
+        This page is
+        <a
+          href="https://github.com/odadki/my-portfolio-js-2022"
+          target="_blank"
+          class="footer-code-link"
+          >open-sourced</a
+        >
+        and coded by: Danielle Oda
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
