--- a/pages/about.html
+++ b/pages/about.html
@@ -110,7 +110,7 @@
                 </span>
                 <span>
                   <a href="https://www.linkedin.com/in/danielle-oda-492066221/" class="website-link" target="__blank" 
-                    >https://www.linkedin.com/in/danielle-oda-492066221/</a
+                    >linkedin profile</a
                   >
                 </span>
               </div>
@@ -120,6 +120,18 @@
         </div>
       </div>
     </div>
+    <footer class="footer-code">
+      <div class="text-center">
+        This page is
+        <a
+          href="https://github.com/odadki/my-portfolio-js-2022"
+          target="_blank"
+          class="footer-code-link"
+          >open-sourced</a
+        >
+        and coded by: Danielle Oda
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
