--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -54,14 +54,14 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6 mt-5">
           <div class="title-text">
-            <h3 class="title-info">Case Study:</h3>
-            <h1 class="title-info">BoutiqueApp</h1>
-            <p class="title-info">Checkout App Flow</p>
+            <h3 class="title-info case-study">Case Study:</h3>
+            <h1 class="title-info case-title">BoutiqueApp</h1>
+            <h3 class="title-info case-desc">Checkout App Flow</h3>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <img
             src="../img-ux/boutique-title-img.png"
             class="img-fluid title-img"
@@ -71,7 +71,7 @@
       <div class="project-overview-section">
         <div class="row">
           <h2 class="project-overview-title">Project Overview</h2>
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <div class="p-3">
               <h4>The problem</h4>
               <p>
@@ -88,7 +88,7 @@
               </p>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <div class="p-3">
               <h4>The product</h4>
               <p>
@@ -101,7 +101,7 @@
               </p>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-4">
             <div class="p-3">
               <h4>My role</h4>
               <p>
@@ -145,21 +145,21 @@
         <div class="pain-points">
           <div class="row">
             <h2 class="mb-4">User pain points</h2>
-            <div class="col-sm-4 pain-point-individual">
+            <div class="col-md-4 pain-point-individual">
               <h4 class="mb-3 text-center">1. Time</h4>
               <p class="p-3 text-center">
                 Individuals did not want to spend a large amount of time
                 commuting to stores and browsing them in-person
               </p>
             </div>
-            <div class="col-sm-4 pain-point-individual">
+            <div class="col-md-4 pain-point-individual">
               <h4 class="mb-3 text-center">2. Size Accuracy</h4>
               <p class="p-3 text-center">
                 Digital platforms were not thorough with providing enough
                 material to determine accurate sizing
               </p>
             </div>
-            <div class="col-sm-4 pain-point-individual">
+            <div class="col-md-4 pain-point-individual">
               <h4 class="mb-3 text-center">3. Clutter</h4>
               <p class="p-3 text-center">
                 Too much text and images spread out on a page were difficult to
@@ -212,7 +212,7 @@
         <div class="row">
           <h3 class="mb-4">Digital wireframes</h3>
 
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <img
               src="../img-ux/boutique-homepage-notes-two.png"
               class="img-fluid mb-3"
@@ -223,7 +223,7 @@
               flow easy to follow.
             </p>
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <img
               src="../img-ux/boutique-shopping-notes.png"
               class="img-fluid mb-3"
@@ -247,7 +247,7 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-sm-6 round-findings">
+          <div class="col-md-6 round-findings">
             <h4 class="text-center mt-3">Round 1 Findings</h4>
             <ul class="findings">
               <li class="findings-line">Users want details on sizing</li>
@@ -257,7 +257,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-sm-6 round-findings">
+          <div class="col-md-6 round-findings">
             <h4 class="text-center mt-3">Round 2 Findings</h4>
             <ul class="findings">
               <li class="findings-line">
@@ -275,7 +275,7 @@
         <div class="row">
           <h2 class="mb-5">Refining the design</h2>
           <h3 class="mb-4">Mockups</h3>
-          <div class="col-sm">
+          <div class="col-md">
             <img
               src="../img-ux/boutique-mockups-shopping.png"
               class="img-fluid mb-3"
@@ -292,7 +292,7 @@
       <div class="mockups">
         <div class="row">
           <h3 class="mb-4">Mockups 2 (after 2nd usability study)</h3>
-          <div class="col-sm">
+          <div class="col-md">
             <img
               src="../img-ux/boutique-mockups-two.png"
               class="img-fluid mb-3"
@@ -309,21 +309,21 @@
       <div class="accessibility-section">
         <div class="row">
           <h3 class="mb-5">Accessibility considerations</h3>
-          <div class="col-sm-4 accessibility-point">
+          <div class="col-md-4 accessibility-point">
             <h5 class="text-center">WCAG</h5>
             <p class="p-3 text-center">
               WCAG contrast between text and color were cross-checked to ensure
               readability
             </p>
           </div>
-          <div class="col-sm-4 accessibility-point">
+          <div class="col-md-4 accessibility-point">
             <h5 class="text-center">Labeled icons</h5>
             <p class="p-3 text-center">
               Icons with small labels beneath (e.g. Account icon) were used to
               ensure it's function is clear
             </p>
           </div>
-          <div class="col-sm-4 accessibility-point">
+          <div class="col-md-4 accessibility-point">
             <h5 class="text-center">Buttons</h5>
             <p class="p-3 text-center">
               Large, bold call-to-action buttons were used to grab users'
@@ -360,8 +360,8 @@
         <h2 class="going-forward">Going forward</h2>
         <div class="takeaways">
           <div class="row">
-            <h3>Takeaways</h3>
-            <div class="col-sm-6 takeaway-paragraph">
+            <h3 class="mb-4">Takeaways</h3>
+            <div class="col-md-6 takeaway-paragraph">
               <h4>Impact</h4>
               <p>
                 The app allows individuals to feel comfortable in purchasing
@@ -378,7 +378,7 @@
                 >
               </p>
             </div>
-            <div class="col-sm-6 takeaway-paragraph">
+            <div class="col-md-6 takeaway-paragraph">
               <h4>What I learned</h4>
               <p>
                 I’ve learned to keep design elements simple. The layout and
@@ -390,15 +390,15 @@
         </div>
         <div class="next-steps">
           <div class="row">
-            <h3>Next steps</h3>
-            <div class="col-sm-6 takeaway-paragraph">
+            <h3 class="mb-4">Next steps</h3>
+            <div class="col-md-6 takeaway-paragraph">
               <h4>1. Testing</h4>
               <p>
                 Conduct an unmoderated usability study to find out if there are
                 any bugs or pain points in the design
               </p>
             </div>
-            <div class="col-sm-6 takeaway-paragraph">
+            <div class="col-md-6 takeaway-paragraph">
               <h4>2. User Research</h4>
               <p>
                 Conduct more user research to determine if any new features or
