--- a/projects/ux-projects.html
+++ b/projects/ux-projects.html
@@ -55,7 +55,7 @@
     <div class="projects-category">
       <div class="container">
         <div class="row g-1 mb-2">
-          <div class="col-sm image">
+          <div class="col-md image">
             <div class="app-image">
               <a href="../projects/ux-one-boutique.html" class="ux-projects">
                 <img
@@ -70,7 +70,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm image">
+          <div class="col-md image">
             <div class="app-image">
               <a
                 href="../projects/ux-two-cook.html"
@@ -79,14 +79,14 @@
               >
                 <img src="../img/carrots-ipad.png" class="ux-img img-fluid" />
                 <div class="image-overlay">
-                  <div class="image-title-dict">Carrots Cooking App</div>
+                  <div class="image-title">Carrots Cooking App</div>
                 </div>
               </a>
             </div>
           </div>
         </div>
         <div class="row g-1">
-          <div class="col-sm image">
+          <div class="col-md image">
             <div class="app-image">
               <a
                 href="../projects/ux-three-pet.html"
@@ -98,12 +98,12 @@
                   class="ux-img img-fluid"
                 />
                 <div class="image-overlay">
-                  <div class="image-title-dict">PetConnect Adoption App</div>
+                  <div class="image-title">PetConnect Adoption App</div>
                 </div>
               </a>
             </div>
           </div>
-          <div class="col-sm image">
+          <div class="col-md image">
             <div class="app-image">
               <img src="../img/white-block-fill.png" class="ux-img img-fluid" />
             </div>
@@ -111,6 +111,18 @@
         </div>
       </div>
     </div>
+    <footer class="footer-code">
+      <div class="text-center">
+        This page is
+        <a
+          href="https://github.com/odadki/my-portfolio-js-2022"
+          target="_blank"
+          class="footer-code-link"
+          >open-sourced</a
+        >
+        and coded by: Danielle Oda
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
