--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -84,6 +84,18 @@
         </div>
       </div>
     </div>
+    <footer class="footer-code">
+      <div class="text-center">
+        This page is
+        <a
+          href="https://github.com/odadki/my-portfolio-js-2022"
+          target="_blank"
+          class="footer-code-link"
+          >open-sourced</a
+        >
+        and coded by: Danielle Oda
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
