--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -56,7 +56,9 @@
                 <a class="nav-link" href="../pages/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
+                <a class="nav-link" href="mailto:odadaniellek@gmail.com"
+                  >Contact</a
+                >
               </li>
             </ul>
           </div>
@@ -65,23 +67,27 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6 image">
-                <a href="https://quirky-lichterman-84f5c8.netlify.app/" class="ux-projects">
+                <a
+                  href="https://quirky-lichterman-84f5c8.netlify.app/"
+                  class="ux-projects"
+                >
                   <img
                     src="../img/weather-img.png"
                     class="portfolio-img carrots-img img-fluid"
                     alt="Carrots Cooking App"
                   />
                   <div class="image-overlay">
-                    <div class="image-title"><h1>Weather App</h1>
-                    <p class="text-center hover-list-title">Dev Tools:
+                    <div class="image-title">
+                      <h1 class="hover-list-title">Weather App</h1>
+
                       <ul class="hover-list">
+                        <li class="title-line">Dev Tools:</li>
                         <li>Bootstrap</li>
                         <li>CSS</li>
                         <li>HTML</li>
                         <li>Javascript</li>
                         <li>React</li>
                       </ul>
-                    </p>
                     </div>
                   </div>
                 </a>
@@ -96,16 +102,17 @@
                     class="portfolio-img dictionary-img img-fluid"
                   />
                   <div class="image-overlay-dict">
-                    <div class="image-title-dict"><h1>Dictionary App</h1>
-                    <p class="text-center hover-list-title">Dev Tools:
+                    <div class="image-title-dict">
+                      <h1 class="hover-list-title">Dictionary App</h1>
+
                       <ul class="hover-list">
+                        <li class="title-line">Dev Tools:</li>
                         <li>Bootstrap</li>
                         <li>CSS</li>
                         <li>HTML</li>
                         <li>Javascript</li>
                         <li>React</li>
                       </ul>
-                    </p>
                     </div>
                   </div>
                 </a>
@@ -113,6 +120,18 @@
             </div>
           </div>
         </div>
+        <footer class="footer-code">
+          <div class="text-center">
+            This page is
+            <a
+              href="https://github.com/odadki/my-portfolio-js-2022"
+              target="_blank"
+              class="footer-code-link"
+              >open-sourced</a
+            >
+            and coded by: Danielle Oda
+          </div>
+        </footer>
         <script
           src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
           integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
