--- a/projects/ux-three-pet.html
+++ b/projects/ux-three-pet.html
@@ -56,9 +56,9 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="title-text">
-            <h3 class="title-info">Case Study:</h3>
-            <h1 class="title-info">PetConnect</h1>
-            <p class="title-info">A pet adoption app</p>
+            <h3 class="title-info case-study">Case Study:</h3>
+            <h1 class="title-info case-title">PetConnect</h1>
+            <p class="title-info case-desc">A pet adoption app</p>
           </div>
         </div>
         <div class="col-sm-6">
