--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Danielle Oda Home Page</title>
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="../img/danielle-favicon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +28,15 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/">Danielle Oda</a>
+      <div>
+        <a class="navbar-brand" href="/"
+          ><img src="../img/doda-logo.png" class="logo-img"
+        /></a>
+        <div>
+          <h6 class="logo-text">user experience designer and developer</h6>
+        </div>
+      </div>
+
       <button
         class="navbar-toggler"
         type="button"
