--- a/pages/about.html
+++ b/pages/about.html
@@ -5,26 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="../img/danielle-favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    
 
     <!-- CSS only -->
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/">Danielle Oda</a>
+      <div>
+        <a class="navbar-brand" href="/"
+          ><img src="../img/doda-logo.png" class="logo-img"
+        /></a>
+        <div>
+          <h6 class="logo-text">user experience designer and developer</h6>
+        </div>
+      </div>
       <button
         class="navbar-toggler"
         type="button"
