--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="../img/danielle-favicon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Noto+Serif:ital@0;1&display=swap"
       rel="stylesheet"
     />
     <link
@@ -24,7 +34,14 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="/">Danielle Oda</a>
+      <div>
+        <a class="navbar-brand" href="/"
+          ><img src="../img/doda-logo.png" class="logo-img"
+        /></a>
+        <div>
+          <h6 class="logo-text">user experience designer and developer</h6>
+        </div>
+      </div>
       <button
         class="navbar-toggler"
         type="button"
@@ -58,7 +75,7 @@
           <div class="col-sm-6 image">
             <a href="../projects/ux-projects.html" class="ux-projects">
               <img
-                src="../img/carrots-img.png"
+                src="../img/landing-ux-img.png"
                 class="portfolio-img carrots-img img-fluid"
                 alt="Carrots Cooking App"
               />
@@ -73,7 +90,7 @@
               class="frontend-projects"
             >
               <img
-                src="../img/dictionary-projects-main.png"
+                src="../img/landing-frontend-img.png"
                 class="portfolio-img dictionary-img img-fluid"
               />
               <div class="image-overlay-dict">
