--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Noto+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -52,14 +58,14 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="../pages/portfolio.html"
-              >Portfolio <span class="sr-only"></span
+              >PORTFOLIO <span class="sr-only"></span
             ></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">About</a>
+            <a class="nav-link" href="../pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
           </li>
         </ul>
       </div>
