--- a/pages/about.html
+++ b/pages/about.html
@@ -50,15 +50,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="../pages/portfolio.html">Portfolio </a>
+            <a class="nav-link" href="../pages/portfolio.html">PORTFOLIO</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="../pages/about.html"
-              ><span class="sr-only">About</span></a
+              ><span class="sr-only">ABOUT</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
           </li>
         </ul>
       </div>
