--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -57,14 +57,14 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="../pages/portfolio.html"
-              ><span class="sr-only">Portfolio </span></a
+              ><span class="sr-only">PORTFOLIO </span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">About</a>
+            <a class="nav-link" href="../pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
           </li>
         </ul>
       </div>
