--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -32,8 +32,9 @@
 
     <link rel="stylesheet" href="../style-frontend.css" />
   </head>
-      <body>
-        <div>
+  <body>
+       <nav class="navbar navbar-expand-lg navbar-light">
+      <div>
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
@@ -41,35 +42,33 @@
           <h6 class="logo-text">user experience designer and developer</h6>
         </div>
       </div>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="../pages/portfolio.html"
-                  ><span class="sr-only">Portfolio </span></a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="mailto:odadaniellek@gmail.com"
-                  >Contact</a
-                >
-              </li>
-            </ul>
-          </div>
-        </nav>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="../pages/portfolio.html"
+              ><span class="sr-only">PORTFOLIO </span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/about.html">ABOUT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
         <div class="projects-category">
           <div class="container">
             <div class="row">
