--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -33,7 +33,8 @@
     <link rel="stylesheet" href="../style-ux.css" />
   </head>
   <body>
-    <div>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div>
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
@@ -56,14 +57,14 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" href="../pages/portfolio.html"
-              ><span class="sr-only">Portfolio </span></a
+              ><span class="sr-only">PORTFOLIO </span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/about.html">About</a>
+            <a class="nav-link" href="../pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">Contact</a>
+            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
           </li>
         </ul>
       </div>
