Fixed responsive navigation

--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -85,15 +85,15 @@
                   <div class="image-overlay">
                     <div class="image-title">
                       <h1 class="hover-list-title">Weather App</h1>
-
-                      <ul class="hover-list">
+                      <div class="hover-list">
                         <li class="title-line">Dev Tools:</li>
                         <li>Bootstrap</li>
                         <li>CSS</li>
+                        <li>Flexbox</li>
                         <li>HTML</li>
                         <li>Javascript</li>
                         <li>React</li>
-                      </ul>
+                      </div>
                     </div>
                   </div>
                 </a>
@@ -111,14 +111,15 @@
                     <div class="image-title-dict">
                       <h1 class="hover-list-title">Dictionary App</h1>
 
-                      <ul class="hover-list">
+                      <div class="hover-list">
                         <li class="title-line">Dev Tools:</li>
                         <li>Bootstrap</li>
                         <li>CSS</li>
+                        <li>Flexbox</li>
                         <li>HTML</li>
                         <li>Javascript</li>
                         <li>React</li>
-                      </ul>
+                      </div>
                     </div>
                   </div>
                 </a>
