updated home page image

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       <div class="row">
         <div class="col-sm">
           <img
-            src="../img/title-hero-img.jpeg"
-            class="img-fluid"
-            alt="tech desk"
+            src="../img/home-hero-white.jpeg"
+            class="img-fluid hawaii-pillbox"
+            alt="hawaii pillbox"
           />
         </div>
       </div>
