--- a/projects/ux-projects.html
+++ b/projects/ux-projects.html
@@ -110,10 +110,7 @@
                 class="ux-projects"
                 alt="PetConnect Pet Adoption"
               >
-                <img
-                  src="../img/petconnect-desktop.png"
-                  class="ux-img img-fluid"
-                />
+                <img src="../img/pet-ux-update.png" class="ux-img img-fluid" />
                 <div class="image-overlay">
                   <div class="image-title">PetConnect Adoption App</div>
                 </div>
