Responsive styling for UX pages tablet

--- a/projects/ux-one-boutique.html
+++ b/projects/ux-one-boutique.html
@@ -71,7 +71,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 mt-5">
+        <div class="col-md-6">
           <div class="title-text">
             <h3 class="title-info case-study">Case Study:</h3>
             <h1 class="title-info case-title">BoutiqueApp</h1>
