Updated resume on About page and added target blank to front-end projects page

--- a/pages/about.html
+++ b/pages/about.html
@@ -58,7 +58,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
+            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -93,7 +93,7 @@
             </p>
             <div class="all-buttons">
               <div>
-                <a href="../img/resume-website.pdf" class="resume-button" target="_blank"> Resume </a>
+                <a href="../img/ux-resume.pdf" class="resume-button" target="_blank"> Resume </a>
               </div>
               <div class="email-section">
                 <span>
@@ -105,8 +105,8 @@
                   </a>
                 </span>
                 <span>
-                  <a href="mailto:odadaniellek@gmail.com" class="website-link" target="__blank"
-                    >odadaniellek@gmail.com</a
+                  <a href="mailto:hello.danielleoda@gmail.com" class="website-link" target="__blank"
+                    >hello.danielleoda@gmail.com</a
                   >
                 </span>
               </div>
