--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             <a class="nav-link" href="../pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
+            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com"
+              >CONTACT</a
+            >
           </li>
         </ul>
       </div>
