--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -64,7 +64,7 @@
             <a class="nav-link" href="../pages/about.html">ABOUT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:odadaniellek@gmail.com">CONTACT</a>
+            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com">CONTACT</a>
           </li>
         </ul>
       </div>
@@ -76,6 +76,7 @@
                 <a
                   href="https://quirky-lichterman-84f5c8.netlify.app/"
                   class="ux-projects"
+                  target="_blank"
                 >
                   <img
                     src="../img/weather-img.png"
@@ -102,6 +103,7 @@
                 <a
                   href="https://loving-hermann-fdb059.netlify.app/"
                   class="frontend-projects"
+                  target="_blank"
                 >
                   <img
                     src="../img/dictionary-img.png"
