Updated CSS on home, UX, About, and Front-End page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -38,9 +38,6 @@
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
-        <div>
-          <h6 class="logo-text">user experience designer and developer</h6>
-        </div>
       </div>
       <button
         class="navbar-toggler"
@@ -82,7 +79,7 @@
                 alt="Carrots Cooking App"
               />
               <div class="image-overlay">
-                <div class="image-title">UX/UI Projects</div>
+                <div class="image-title">UX/UI PROJECTS</div>
               </div>
             </a>
           </div>
@@ -96,7 +93,9 @@
                 class="portfolio-img dictionary-img img-fluid"
               />
               <div class="image-overlay-dict">
-                <div class="image-title-dict">Front-End</div>
+                <div class="image-title-dict text-center">
+                  FRONT-END DEVELOPMENT PROJECTS
+                </div>
               </div>
             </a>
           </div>
