--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Front-End Dev Projects</title>
+    <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UX Design Projects</title>
     <link
       rel="shortcut icon"
       type="image/png"
@@ -38,9 +43,7 @@
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
-        <div>
-          <h6 class="logo-text">user experience designer and developer</h6>
-        </div>
+
       </div>
       <button
         class="navbar-toggler"
