--- a/projects/ux-three-pet.html
+++ b/projects/ux-three-pet.html
@@ -38,9 +38,6 @@
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
-        <div>
-          <h6 class="logo-text">user experience designer and developer</h6>
-        </div>
       </div>
       <button
         class="navbar-toggler"
@@ -76,7 +73,7 @@
         <div class="col-sm-6">
           <div class="title-text">
             <h3 class="title-info case-study">Case Study:</h3>
-            <h1 class="title-info case-title">PetConnect</h1>
+            <h1 class="title-info case-title">PETCONNECT</h1>
             <p class="title-info case-desc">A pet adoption app</p>
           </div>
         </div>
@@ -90,7 +87,7 @@
       <div class="project-overview-section">
         <div class="row">
           <h2 class="project-overview-title">Project Overview</h2>
-          <div class="col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="p-3">
               <h4>The problem</h4>
               <p>
@@ -109,7 +106,7 @@
               </p>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="p-3">
               <h4>The product</h4>
               <p>
@@ -122,7 +119,7 @@
               </p>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-lg-4 col-md-4 col-sm-12">
             <div class="p-3">
               <h4>My role</h4>
               <p>UX Designer leading the website and app design</p>
