--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Noto+Serif:ital@0;1&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300&family=Pontano+Sans&family=Urbanist:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -38,9 +44,6 @@
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
-        <div>
-          <h6 class="logo-text">user experience designer and developer</h6>
-        </div>
       </div>
 
       <button
@@ -74,13 +77,20 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-sm">
-          <img
-            src="../img/home-hero-white.jpeg"
-            class="img-fluid hawaii-pillbox"
-            alt="hawaii pillbox"
-          />
-        </div>
+        <h1 class="home-title text-center">DANIELLE ODA</h1>
+        <p class="home-paragraph text-center">
+          User Experience Designer creating elegant and functional web
+          experiences
+        </p>
+      </div>
+      <div class="text-center">
+        <a
+          href="../img/ux-resume.pdf"
+          class="resume-button-home"
+          target="_blank"
+        >
+          RESUME
+        </a>
       </div>
     </div>
     <footer class="footer-code">
