--- a/pages/about.html
+++ b/pages/about.html
@@ -5,23 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="shortcut icon" type="image/png" href="../img/danielle-favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="../img/danielle-favicon.png"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Sulphur+Point:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Noto+Serif:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&family=Noto+Serif:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300&family=Pontano+Sans&family=Urbanist:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    
 
     <!-- CSS only -->
     <link rel="stylesheet" href="../style.css" />
@@ -32,9 +44,6 @@
         <a class="navbar-brand" href="/"
           ><img src="../img/doda-logo.png" class="logo-img"
         /></a>
-        <div>
-          <h6 class="logo-text">user experience designer and developer</h6>
-        </div>
       </div>
       <button
         class="navbar-toggler"
@@ -58,7 +67,9 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com">CONTACT</a>
+            <a class="nav-link" href="mailto:hello.danielleoda@gmail.com"
+              >CONTACT</a
+            >
           </li>
         </ul>
       </div>
@@ -66,12 +77,12 @@
     <div class="d-flex justify-content-center about-me-all">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
             <span
               ><img src="../img/bio-pic.jpg" class="img-fluid bio-pic"
             /></span>
           </div>
-          <div class="col-md-6 about-section">
+          <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 about-section">
             <h1 class="about-title mt-4">Hello, I'm Danielle</h1>
             <p class="about-paragraph mt-3">
               <em
@@ -88,43 +99,56 @@
               clients, understanding their needs and acting upon that knowledge
               to create my best work. After completing an intense UX Design and
               Front-End program, I’m excited to continue my journey in
-              empathizing with users and building functional designs solutions
+              empathizing with users and building functional design solutions
               that have accessibility needs in mind.
             </p>
             <div class="all-buttons">
               <div>
-                <a href="../img/ux-resume.pdf" class="resume-button" target="_blank"> Resume </a>
+                <a
+                  href="../img/ux-resume.pdf"
+                  class="resume-button"
+                  target="_blank"
+                >
+                  RESUME
+                </a>
               </div>
-              <div class="email-section">
-                <span>
-                  <a href="mailto:odadaniellek@gmail.com" class="email-button"
-                    ><img
-                      src="../img/iconmonstr-email-11.svg"
-                      class="email-icon"
-                    />
-                  </a>
-                </span>
-                <span>
-                  <a href="mailto:hello.danielleoda@gmail.com" class="website-link" target="__blank"
-                    >hello.danielleoda@gmail.com</a
-                  >
-                </span>
-              </div>
-              <div class="linkedin-section">
-                <span>
-                  <a href="#" class="linkedin-button"
-                    ><img
-                      src="../img/iconmonstr-linkedin-5.svg"
-                      class="linkedin-icon"
-                    />
-                  </a>
-                </span>
-                <span>
-                  <a href="https://www.linkedin.com/in/danielle-oda-492066221/" class="website-link" target="__blank" 
-                    >linkedin profile</a
-                  >
-                </span>
-              </div>
+              <div class="email-linkedin-link">
+                <div class="email-section">
+                  <span>
+                    <a href="mailto:odadaniellek@gmail.com" class="email-button"
+                      ><img
+                        src="../img/iconmonstr-email-11.svg"
+                        class="email-icon"
+                      />
+                    </a>
+                  </span>
+                  <span>
+                    <a
+                      href="mailto:hello.danielleoda@gmail.com"
+                      class="website-link"
+                      target="__blank"
+                      >hello.danielleoda@gmail.com</a
+                    >
+                  </span>
+                </div>
+                <div class="linkedin-section">
+                  <span>
+                    <a href="#" class="linkedin-button"
+                      ><img
+                        src="../img/iconmonstr-linkedin-5.svg"
+                        class="linkedin-icon"
+                      />
+                    </a>
+                  </span>
+                  <span>
+                    <a
+                      href="https://www.linkedin.com/in/danielle-oda-492066221/"
+                      class="website-link"
+                      target="__blank"
+                      >linkedin profile</a
+                    >
+                  </span>
+                </div>
               </div>
             </div>
           </div>
