--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         </ul>
       </div>
     </nav>
-    <div class="container">
+    <div class="container home-all">
       <div class="row">
         <h1 class="home-title text-center">DANIELLE ODA</h1>
         <p class="home-paragraph text-center">
-          User Experience Designer creating elegant and functional web
-          experiences
+          User Experience Designer and Frontend Developer creating elegant and
+          functional web experiences
         </p>
       </div>
       <div class="text-center">
