Updated CSS for Front End

--- a/pages/about.html
+++ b/pages/about.html
@@ -112,42 +112,64 @@
                   RESUME
                 </a>
               </div>
-              <div class="email-linkedin-link">
-                <div class="email-section">
-                  <span>
-                    <a href="mailto:odadaniellek@gmail.com" class="email-button"
-                      ><img
-                        src="../img/iconmonstr-email-11.svg"
-                        class="email-icon"
-                      />
-                    </a>
-                  </span>
-                  <span>
-                    <a
-                      href="mailto:hello.danielleoda@gmail.com"
-                      class="website-link"
-                      target="__blank"
-                      >hello.danielleoda@gmail.com</a
-                    >
-                  </span>
-                </div>
-                <div class="linkedin-section">
-                  <span>
-                    <a href="#" class="linkedin-button"
-                      ><img
-                        src="../img/iconmonstr-linkedin-5.svg"
-                        class="linkedin-icon"
-                      />
-                    </a>
-                  </span>
-                  <span>
-                    <a
-                      href="https://www.linkedin.com/in/danielle-oda-492066221/"
-                      class="website-link"
-                      target="__blank"
-                      >linkedin profile</a
-                    >
-                  </span>
+              <div class="row about-links">
+                <div class="email-linkedin-link">
+                  <div class="email-section">
+                    <span>
+                      <a
+                        href="mailto:odadaniellek@gmail.com"
+                        class="email-button"
+                        ><img
+                          src="../img/iconmonstr-email-11.svg"
+                          class="email-icon"
+                        />
+                      </a>
+                    </span>
+                    <span>
+                      <a
+                        href="mailto:hello.danielleoda@gmail.com"
+                        class="website-link"
+                        target="__blank"
+                        >hello.danielleoda@gmail.com</a
+                      >
+                    </span>
+                  </div>
+                  <div class="linkedin-section">
+                    <span>
+                      <a href="#" class="linkedin-button"
+                        ><img
+                          src="../img/iconmonstr-linkedin-5.svg"
+                          class="linkedin-icon"
+                        />
+                      </a>
+                    </span>
+                    <span>
+                      <a
+                        href="https://www.linkedin.com/in/danielle-oda-492066221/"
+                        class="website-link"
+                        target="__blank"
+                        >linkedin profile</a
+                      >
+                    </span>
+                  </div>
+                  <div class="github-section">
+                    <span>
+                      <a href="#" class="github-button"
+                        ><img
+                          src="../img/iconmonstr-github-5.svg"
+                          class="github-icon"
+                        />
+                      </a>
+                    </span>
+                    <span>
+                      <a
+                        href="https://github.com/odadki"
+                        class="website-link"
+                        target="__blank"
+                        >github</a
+                      >
+                    </span>
+                  </div>
                 </div>
               </div>
             </div>
