--- a/projects/frontend-projects.html
+++ b/projects/frontend-projects.html
@@ -88,15 +88,15 @@
                   />
                   <div class="image-overlay">
                     <div class="image-title">
-                      <h1 class="hover-list-title">Weather App</h1>
+                      <h1 class="hover-list-title">WEATHER APP</h1>
                       <div class="hover-list">
-                        <li class="title-line">Dev Tools:</li>
-                        <li>Bootstrap</li>
+                        <li class="title-line">DEV TOOLS:</li>
+                        <li>BOOTSTRAP</li>
                         <li>CSS</li>
-                        <li>Flexbox</li>
+                        <li>FLEXBOX</li>
                         <li>HTML</li>
-                        <li>Javascript</li>
-                        <li>React</li>
+                        <li>JAVASCRIPT</li>
+                        <li>REACT</li>
                       </div>
                     </div>
                   </div>
@@ -114,16 +114,16 @@
                   />
                   <div class="image-overlay-dict">
                     <div class="image-title-dict">
-                      <h1 class="hover-list-title">Dictionary App</h1>
+                      <h1 class="hover-list-title">DICTIONARY APP</h1>
 
                       <div class="hover-list">
-                        <li class="title-line">Dev Tools:</li>
-                        <li>Bootstrap</li>
+                        <li class="title-line">DEV TOOLS:</li>
+                        <li>BOOTSTRAP</li>
                         <li>CSS</li>
-                        <li>Flexbox</li>
+                        <li>FLEXBOX</li>
                         <li>HTML</li>
-                        <li>Javascript</li>
-                        <li>React</li>
+                        <li>JAVASCRIPT</li>
+                        <li>REACT</li>
                       </div>
                     </div>
                   </div>
