Updated CSS and Front End Page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
       <button
         class="navbar-toggler"
+        id="navbarToggle"
         type="button"
         data-toggle="collapse"
         data-target="#navbarNav"
