--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -68,40 +68,121 @@
         </ul>
       </div>
     </nav>
-    <div class="projects-category">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 image">
-            <a href="../projects/ux-projects.html" class="ux-projects">
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <a
+            href="../projects/ux-one-boutique.html"
+            class="projects-card-text"
+            alt="BoutiqueApp Shopping on Mobile Device"
+          >
+            <div class="card h-100 shadow-sm bg-white projects-card">
               <img
-                src="../img/landing-ux-img.png"
-                class="portfolio-img carrots-img img-fluid"
-                alt="Carrots Cooking App"
+                src="../img/boutique-home-mobile-1744.png"
+                class="card-img-top img-fluid projects-img1-test"
+                alt="BoutiqueApp Shopping on Mobile Device"
               />
-              <div class="image-overlay">
-                <div class="image-title">UX/UI PROJECTS</div>
+              <div class="card-body">
+                <h5 class="card-title">BOUTIQUEAPP</h5>
+                <p class="card-text">
+                  <em>Figma, User testing, Responsive designs, Wireframing</em>
+                </p>
               </div>
-            </a>
-          </div>
-          <div class="col-sm-6 image">
-            <a
-              href="../projects/frontend-projects.html"
-              class="frontend-projects"
-            >
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a
+            href="../projects/ux-two-cook.html"
+            class="projects-card-text"
+            alt="Carrots Cooking App for Kids"
+          >
+            <div class="card h-100 shadow-sm bg-white projects-card">
               <img
-                src="../img/landing-frontend-img.png"
-                class="portfolio-img dictionary-img img-fluid"
+                src="../img/carrots-home-mobile-1744.png"
+                class="card-img-top img-fluid projects-img1-test"
+                alt="Carrots Cooking App for Kids"
               />
-              <div class="image-overlay-dict">
-                <div class="image-title-dict text-center">
-                  FRONT-END DEVELOPMENT PROJECTS
-                </div>
+              <div class="card-body">
+                <h5 class="card-title">CARROTS COOKING APP</h5>
+                <p class="card-text">
+                  <em
+                    >Figma, Mobile-first, Responsive designs, Wireframing,
+                    Prototyping</em
+                  >
+                </p>
               </div>
-            </a>
-          </div>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a
+            href="../projects/ux-three-pet.html"
+            class="projects-card-text"
+            alt="PetConnect Pet Adoption Flow"
+          >
+            <div class="card h-100 shadow-sm bg-white projects-card">
+              <img
+                src="../img/petconnect-home-mobile-1744.png"
+                class="card-img-top img-fluid projects-img1-test"
+                alt="PetConnect Pet Adoption Flow"
+              />
+              <div class="card-body">
+                <h5 class="card-title">PETCONNECT ADOPTION</h5>
+                <p class="card-text">
+                  <em
+                    >Adobe XD, Responsive designs, Wireframing, Prototyping</em
+                  >
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a
+            href="../projects/frontend-dictionary.html"
+            class="projects-card-text"
+            alt="Dictionary App built with React"
+          >
+            <div class="card h-100 shadow-sm bg-white projects-card">
+              <img
+                src="../img/dictionaryapp-home-1744.png"
+                class="card-img-top img-fluid projects-img1-test"
+                alt="Dictionary App built with React"
+              />
+              <div class="card-body">
+                <h5 class="card-title">DICTIONARY APP</h5>
+                <p class="card-text">
+                  <em>React, JS, HTML, CSS, Flexbox, Bootstrap</em>
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a
+            href="../projects/frontend-weather.html"
+            class="projects-card-text"
+            alt="Weather App built with React"
+          >
+            <div class="card h-100 shadow-sm bg-white projects-card">
+              <img
+                src="../img/weatherapp-home-1744.png"
+                class="card-img-top img-fluid projects-img1-test"
+                alt="Weather App built with React"
+              />
+              <div class="card-body">
+                <h5 class="card-title">WEATHER APP</h5>
+                <p class="card-text">
+                  <em>React, JS, HTML, CSS, Flexbox, Bootstrap</em>
+                </p>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
+
     <footer class="footer-code">
       <div class="text-center">
         This page is
