--- a/projects/frontend-dictionary.html
+++ b/projects/frontend-dictionary.html
@@ -33,6 +33,9 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style-frontend.css" />
   </head>
   <body>
@@ -70,16 +73,38 @@
       </div>
     </nav>
     <div class="frontend-all">
-        <div class="container">
-             <div class="row">
-                 <div class="col-lg-12">
-                     <h1>DICTIONARY APP</h1>
-                     <H2>React, JS, HTML, CSS, Flexbox, Bootstrap</H2>
-                     <P>This project is designed with React and uses a Dictionary API. The layout is intended to be kept simple, with visual hierarchy of characteristics commonly found in a dictionary app.</P>
-                     <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button">GO TO PROJECT</a>
-                 </div>
-             </div>
-        </div> 
+      <div class="container">
+        <div class="row">
+          <div class="frontend-header">
+            <a href="https://loving-hermann-fdb059.netlify.app/" class="dictionary-button" target="_blank">GO TO PROJECT</a>
+            <div class="col-lg-12">
+              <h1 class="dictionary-title">DICTIONARY APP</h1>
+              <h3 class="dictionary-tools">React, JS, HTML, CSS, Bootstrap</h2>
+              <p class="dictionary-summary">This project is designed with React and uses a Dictionary API. The layout is intended to be kept simple, with visual hierarchy of characteristics commonly found in a dictionary app.</p>     
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-6 img-fluid">
+            <video autoplay="true" loop="true" class="dictionary-video">
+              <source src="../img/dictionary-video.mp4" type="video/mp4" />
+            </video>
+          </div>
+          <div class="col-lg-6">
+            <h4 class="text-center mb-3 dictionary-project-details">Project details:</h4>
+            <ol class="dictionary-list">
+              <li>Page is organized with visual hierarchy, and built with essentials users will find in a dictionary app.</li>
+              <br />
+              <li>Input search bar loads with autofocus on to grab user's attention.</li>
+              <br />
+              <li>After entering a word and pressing "Enter", a call is made to the API and users get results immediately</li> 
+              <br />
+              <li>A phonetics, dictionary and images API were all used to build app.</li>
+              <br />
+              <li>This site is fully responsive to ensure the app looks great on any device.</li>
+            </ol>
+          </div>
+      </div> 
     </div>
           
                 
